Grid was struggling on small viewports, flex easily resolves here

--- a/style.css
+++ b/style.css
@@ -310,6 +310,7 @@ p {
   right: 0;
   margin: 0 auto;
   width: min-content;
+  height: min-content;
   opacity:0;
   transition: 0.5s ease-in-out;
   padding:4px 8px;
@@ -322,15 +323,17 @@ p {
 
 }
 
-
+.preview-item > p {
+  text-align: center;
+  padding-top: 4px;
+}
 
 .github-layout {
-  display: grid;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   gap: 10px;
-  grid-template-areas:
-                  "1"
-                  "2"
-                  "2";
 }
 
 .github-layout > div {
@@ -340,28 +343,39 @@ p {
 }
 /* github preview-item div styles */
 .github-calendar{
+  
   background-color: var(--bg-color-default);
   overflow-x: scroll;
-  transition: 0.3 ease-in-out;
 }
 /* github cal fade in*/ 
 .embedded-github{
-  /* opacity: 0; */
-  transition: 0.3s ease-in-out;
 }
 
 .github-calendar:hover{
   z-index: 5;
-  transform: translateX(-20%) translateY(20%) scaleX(140%) scaleY(140%);
+  transform: scale(1.06);
+}
+
+.pullshark-container{
+  
+  background-color: var(--bg-color-default);
 }
 
 .pullshark-container:hover{
+  z-index: 5;
+  scale: 1.06;
+}
+.github-subtext{
   
+  background-color: var(--bg-color-default);
+}
+.github-subtext:hover{
+  z-index:5;
+  scale: 1.06;
 }
 
 .pull-shark-img{
   width: 100%;
-  height: 100%;
   border-radius: 10px;
 }
 
